     MP game.
 * WML engine:
   * Fixed units shown with [move_units_fake] disappearing between steps
     (bug #1516).
   * [modify_side] now supports side_name
   * [set_menu_item] no longer fires repeatedly if the player holds the
     hotkey (bug #1711). If you were relying on repeated firing, add
     repeat_on_hold=yes to [default_hotkey].
 * Miscellaneous and bug fixes:
   * Fixed standing animation toggle not taking immediate effect (bug
     #1653).
   * Fixed error when de-assigning village with [capture_village].
   * Enabled the use of Open Type Font (.otf) fonts.
   * Fresh installs of the game will now open in fullscreen by default.
   * New game theme music by Mattias Westlund.
   * The unit advancement prompt is no longer shown for droided sides.
   * Fixed custom game titles being lost when reloading MP games.
   * The copy-to-clipboard function on the Lua console now produces plain text
     without Pango markup or entities for special characters (<, > and &)
     (bug #2434).
   * 'Turn Changed' desktop notifications in MP will now only display when
     human-controlled sides take control.
 * Music and sound effects:
   * Updated a few UI sounds.

Version 1.13.11:
 * Add-ons client:
   * Added an order dropdown that allows you to sort add-ons by the time of
     latest update or original upload (issue #1747)
   * Players will now be prompted to update outdated dependencies alongside
     downloading missing ones when installing an add-on.
 * Add-ons server:
   * Empty passphrases from malfunctioning clients that do not provide or
     generate a passphrase otherwise are now rejected instead of treated as
     valid.
 * Campaigns:
   * The Cutscene_Minimal theme is now used in all dialog-only scenarios that
     have `linger=no` in [end_level].
   * An Orcish Incursion:
     * New story art.
   * A Tale of Two Brothers:
     * Added a full set of hints on easy difficulty.
   * Delfador's Memoirs: