@@ -15,6 +15,8 @@ Version 1.13.11+dev:
    * [set_menu_item] no longer fires repeatedly if the player holds the
      hotkey (bug #1711). If you were relying on repeated firing, add
      repeat_on_hold=yes to [default_hotkey].
+   * [set_variable] now supports prefix and suffix operations for
+     string concatenation.
  * Miscellaneous and bug fixes:
    * Fixed standing animation toggle not taking immediate effect (bug
      #1653).
